--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.News_app"
         tools:targetApi="31">
-
+        <activity
+            android:name=".NewsDetail"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
